manifests/overlays/prod/patch-cloudsql-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symphony
spec:
  template:
    spec:
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.14.1
          args:
            - --structured-logs
            - --port=5432
            - PROJECT_ID:REGION:INSTANCE_PROD
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
