manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symphony
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: symphony.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-symphony
                port:
                  number: 80
